02-configs-and-routes/route/route_all_rev1.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - revisionName: greeter-00001
      percent: 100
