02-configs-and-routes/route/route_all_rev2.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
  namespace: knativetutorial
spec:
  traffic:
    - revisionName: greeter-00002
      percent: 100
