02-configs-and-routes/route/route_default.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - configurationName: greeter
      percent: 100
