02-configs-and-routes/route/route_rev1-10_rev2-90.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
  namespace: knativetutorial
spec:
  traffic:
    - revisionName: greeter-00001
      percent: 10
    - revisionName: greeter-00002
      percent: 90
