02-configs-and-routes/route/route_rev1-50_rev2-50.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - revisionName: greeter-00001
      percent: 50
    - revisionName: greeter-00002
      percent: 50
